--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -7,7 +7,10 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1237891632448278618}{Archon Studios Discord}
 
-\textit{Wild Dragons are terrorizing the countryside. Farmers are unable to grow their crops in peace, caravans are scared to move their goods. You must strike at their core and defeat the beasts. If by nothing else, then by sheer force of will.}
+\textit{Wild Dragons are terrorizing the countryside.
+Farmers are unable to grow their crops in peace, caravans are scared to move their goods.
+You must strike at their core and defeat the beasts.
+If by nothing else, then by sheer force of will.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This scenario is played over 12 rounds.
@@ -78,10 +81,10 @@ During this scenario:
   \item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia field.
   \item When a Hero moves to the Dragon Utopia field, they must fight, depending on chosen difficulty, the following number of Neutral units:
   \begin{itemize}[leftmargin=15pt]
-    \item \textbf{Easy:} 1 × \svg{azure}, 2 × \svg{silver}, 1 × \svg{bronze}
-    \item \textbf{Normal:} 1 × \svg{azure}, 1 × \svg{golden}, 2 × \svg{silver}
-    \item \textbf{Hard:} 1 × \svg{azure}, 3 × \svg{golden}
-    \item \textbf{Impossible:}  2 × \svg{azure}, 2 × \svg{golden}
+    \item \textbf{Easy:} 1 × \svgunit{azure}, 2 × \svgunit{silver}, 1 × \svgunit{bronze}
+    \item \textbf{Normal:} 1 × \svgunit{azure}, 1 × \svgunit{golden}, 2 × \svgunit{silver}
+    \item \textbf{Hard:} 1 × \svgunit{azure}, 3 × \svgunit{golden}
+    \item \textbf{Impossible:}  2 × \svgunit{azure}, 2 × \svgunit{golden}
   \end{itemize}
   \item Follow these steps when Combat begins against Neutral units at the Dragon Utopia:
   \begin{itemize}[leftmargin=15pt]
@@ -90,12 +93,12 @@ During this scenario:
   \end{itemize}
 \end{itemize}
 
-\end{multicols*}
-
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (4.5, -16) {\includegraphics[scale=0.4]{\_assets/maps/force-of-will-2p.png}};
-  \node at (4.5, -22.3) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (12.1, -5) {\includegraphics[scale=0.4]{\_assets/maps/force-of-will-3p.png}};
-  \node at (12.1, -11.3) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+  \node at (14, 6.5) {\includegraphics[width=0.8\linewidth]{\_assets/maps/force-of-will-2p.png}};
+  \node at (14, 0.5) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
+  \node at (7, -6) {\includegraphics[width=1.05\linewidth]{\_assets/maps/force-of-will-3p.png}};
+  \node at (7, -11.8) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
 \end{tikzpicture}
+
+\end{multicols*}
