Capitalization changes (and some minor adjustments) to reflect the same style as the rewritten rulebook

--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -14,7 +14,7 @@ Once we own Erathia's capitol, not even Catherine Ironfist will wrench it from o
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over 16 rounds.
+This scenario plays out over 16 Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
@@ -44,7 +44,7 @@ This scenario plays out over 16 rounds.
   \item Search (4) the Spell deck.
 \end{itemize}
 
-\subsection*{\MakeUppercase{AI hero setup}}
+\subsection*{\MakeUppercase{AI Hero Setup}}
 
 \textbf{Faction:} Castle
 
@@ -56,11 +56,11 @@ This scenario plays out over 16 rounds.
 
 \textbf{General Kendal's Spell Deck:} 2 × Haste Spell card
 
-\textbf{General Kendal's Skill:} Artillery Ability card\footnote{For General Kendal, the Artilery Ability card always resolves the Expert effect and the Ballista War Machine activates every time the Artillery Ability card is drawn, as well as at the beginning of a Combat Round.}
+\textbf{General Kendal's Skill:} Artillery Ability card\footnote{For General Kendal, the Artilery Ability card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability card is drawn, as well as at the beginning of a Combat Round.}
 
 \textbf{Charging Heroes' Factions:} Rampart, Tower, Castle
 
-\textbf{Charging Heroes' Armies:} Neutral Army is one level higher than your Hero level (max level VI)\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}.
+\textbf{Charging Heroes' Armies:} Neutral Army is one Level higher than your Hero Level (Max Level VI)\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}.
 
 \textbf{Charging Heroes' Deck:} 2 × Might card, 2 × Magic card
 
@@ -68,15 +68,15 @@ This scenario plays out over 16 rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map tiles and set them up as shown in the scenario map layout:
+Take the following Map Tiles and set them up as shown in the scenario map layout:
 
-\textbf{2 × Starting (I) Map tile}
+\textbf{2 × Starting (I) Map Tile}
 \begin{itemize}
   \item 1 × Inferno (S6)
   \item 1 × Castle (S3)
 \end{itemize}
 
-\textbf{3 × Far (II--III) Map tile}
+\textbf{3 × Far (II--III) Map Tile}
 \begin{itemize}
   \item 1 × Castle (F3)
   \item 1 × Rampart (F10)
@@ -86,7 +86,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
   \item 1 × Necropolis (choose from: F4, \#F6, F7)
 \end{itemize}
 
-\textbf{2 × Near (IV--V) Map tile}
+\textbf{2 × Near (IV--V) Map Tile}
 \begin{itemize}
   \item 2 × Castle (N3, choose from: \#N3, N6)
   \item 1 × Rampart (N8)
@@ -96,21 +96,21 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 \subsection*{\MakeUppercase{Heroes placement}}
 
 The Enemy Hero General Kendal is represented by one Castle Faction Hero
-model and appears on the center field of the S3 Starting Map tile.
+model and appears on the center Field of the S3 Starting Map Tile.
 
 The Castle Charging Hero is represented by one Castle Faction Hero model
-and appears on (and owns) the Settlement field of the F3 Map tile.
+and appears on (and owns) the Settlement Field of the F3 Map Tile.
 
 The Rampart Charging Hero is represented by one Rampart Faction Hero model
-and appears on (and owns) the Settlement field of the F10 Map tile.
+and appears on (and owns) the Settlement Field of the F10 Map Tile.
 
 The Tower Charging Hero is represented by one Tower Faction Hero model
-and appears on (and owns) the Settlement field of the \#F1 Map tile.
+and appears on (and owns) the Settlement Field of the \#F1 Map Tile.
 
-Place your Main Hero on the center field of the Inferno Starting S6 Map tile.
+Place your Main Hero on the center Field of the Inferno Starting S6 Map Tile.
 
 Place your Secondary Hero, represented by one Dungeon Faction Hero model of your choice,
-on the Settlement field of the F2 Map tile. This Settlement produces no resources.
+on the Settlement Field of the F2 Map Tile. This Settlement produces no resources.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -155,7 +155,7 @@ You run out of time -- you have time till the end of the Round 16.
 \textbf{\nth{10} Round:}
 \begin{itemize}
   \item For any Enemy Settlements (F3, F10, \#F1) that have not been defeated, an additional Enemy
-    Charging Hero of that Faction appears on each Settlement at the beginning of this round.
+    Charging Hero of that Faction appears on each Settlement at the beginning of this Round.
 \end{itemize}
 
 \textbf{\nth{11} Round:}
@@ -191,23 +191,23 @@ You run out of time -- you have time till the end of the Round 16.
 
 \subsection*{\MakeUppercase{Additional rules}}
 
-During this ``Inferno'' campaign scenario, the following rules apply:
+During this ``Inferno'' Campaign scenario, the following rules apply:
 
 \begin{itemize}
     \item The General Kendal Hero does not move and only waits in their Town. They start with Walls, a Gate,
       and an Arrow Tower on their side of the Combat Board.
-    \item The difficulty level of every Combat encounter on the map increases by one till the end of the scenario
+    \item The difficulty Level of every Combat encounter on the map increases by one till the end of the scenario
       (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).
     \item The Enemy Charging Heroes have only 2 Movement Points, instead of 3. They ignore everything else
-      (including mines and settlements if possible) and go straight for the Player's Faction Town (on Map Tile S6).
-      They do not pursue the player directly, but if they happen to be on the same Map tile, they will
+      (including Mines and Settlements if possible) and go straight for the player's Faction Town (on Map Tile S6).
+      They do not pursue the player directly, but if they happen to be on the same Map Tile, they will
       attack the player's Main Hero (not Secondary).
-    \item The Enemy Charging Heroes move after the player's turn ends.
-    \item The borders on the Castle Starting Map tile S3 cannot be crossed by any means until
+    \item The Enemy Charging Heroes move after the player's Turn ends.
+    \item The borders on the Castle Starting Map Tile S3 cannot be crossed by any means until
       all Enemy Settlements (F3, F10, \#F1) have been defeated.
     \item Defeating Enemy Charging Heroes provides 2 \svg{valuables}.
     \item Obelisks give you 1 \svg{valuables} and function as a ``Castle
-      Gate'' location (only if you have the ``Castle Gate'' built in your town).
+      Gate'' location (only if you have the ``Castle Gate'' built in your Town).
 \end{itemize}
 
 \vspace*{\fill}
