--- a/metadata.tex
+++ b/metadata.tex
@@ -245,7 +245,7 @@
 }
 
 % Four mandatory params
-% - [optional] set to "subsection" or any other level if you want to have this as a subsection in TOC
+% - [optional] set to "subsection" or any other Level if you want to have this as a subsection in TOC
 % - lines of campaign name (1-2 according to the name length)
 % - campaign name
 % - scenario name
