--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -8,7 +8,7 @@ Follow these suggestions if you're not sure which scenario is best for you.
 \subsection*{Cooperative Mode}
 
 If you're new to the game and want to try \textbf{learning the rules}, start with \pagelink{Emerald Island}{Emerald Island}.
-For a big adventure for \textbf{up to 6 players} with an epic battle at the end, try \pagelink{Titans' Stronghold}{Titans' Stronghold}.
+For a big adventure \textbf{up to 6 players} with an epic battle at the end, try \pagelink{Titans' Stronghold}{Titans' Stronghold}.
 For more tactical play for two players, try \pagelink{Sentinels}{Sentinels}.
 
 \subsection*{Clash Mode}
@@ -23,7 +23,7 @@ There is a 3-scenario Inferno \pagelink{1. A Devilish Plan}{Dungeons and Devils}
 
 \subsection*{Recommendations}
 
-For information regarding your play time, strategizing, and custom rules, checkout out \pagelink{Recommendations}{recommendations} at the and of this book.
+For information regarding your play time, strategizing, and custom rules, checkout out \pagelink{Recommendations}{Recommendations} at the and of this book.
 
 \end{multicols}
 
