--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -9,7 +9,7 @@
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over ... rounds.
+This scenario plays out over ... Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
@@ -52,16 +52,16 @@ This scenario plays out over ... rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the scenario map layout:
 
-\textbf{X × Starting (I) Map tile}
+\textbf{X × Starting (I) Map Tile}
 \begin{itemize}
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far (II--III) Map tile}
+\textbf{Y × Far (II--III) Map Tile}
 
-\textbf{Z × Near (IV--V) Map tile}
+\textbf{Z × Near (IV--V) Map Tile}
 
 \subsection*{\MakeUppercase{Heroes placement}}
 
@@ -76,7 +76,7 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 \subsection*{\MakeUppercase{Timed Events}}
 
 % Unless you have a rich and non-linear story, write it under specific
-% rounds here.
+% Rounds here.
 %
 % Otherwise create a new subsection "The Story" at the end and refer to it.
 
@@ -105,7 +105,7 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 \subsection*{\MakeUppercase{Additional rules}}
 
-During this ``... faction ...'' campaign scenario, the following rules apply:
+During this ``... Faction ...'' Campaign scenario, the following rules apply:
 
 \begin{itemize}
   \item ...
