--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -10,7 +10,7 @@
 \textit{A lady clad in dark robes visits you in your dreams, offering you a golden chalice filled with blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This scenario is played over 13 rounds.
+This scenario is played over 13 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 4
@@ -21,44 +21,44 @@ This scenario is played over 13 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svgunit{bronze} units with the \textit{highest} Recruitment cost
-  \item A Pack of \svgunit{bronze} units with the \textit{lowest} Recruitment cost
+  \item A Few \svgunit{bronze} Units with the \textit{highest} Recruitment cost
+  \item A Pack of \svgunit{bronze} Units with the \textit{lowest} Recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
-\textbf{Map tile Pool:} Each player takes 2 random Far (II--III) Map tiles, one of which must contain a Settlement
+\textbf{Map Tile Pool:} Each player takes 2 random Far (II--III) Map Tiles, one of which must contain a Settlement
 
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the scenario map layout:
 
 \textbf{For a 2-player scenario:}
 \begin{itemize}
-  \item 2 × Starting (I) Map tile
-  \item 4 × Near (IV--V) Map tile, all of which must contain an Obelisk
-  \item 4 × Far (II--III) Map tile, 2 of which must contain a Settlement
-  \item 1 × Center (VI--VII) Map tile, which must contain the Grail field
+  \item 2 × Starting (I) Map Tile
+  \item 4 × Near (IV--V) Map Tile, all of which must contain an Obelisk
+  \item 4 × Far (II--III) Map Tile, 2 of which must contain a Settlement
+  \item 1 × Center (VI--VII) Map Tile, which must contain the Grail Field
 \end{itemize}
 
 \textbf{For a 4-player scenario:}
 \begin{itemize}
-  \item 4 × Starting (I) Map tile
-  \item 6 × Near (IV--V) Map tile, 4 of which must contain an Obelisk
-  \item 8 × Far (II--III) Map tile, 4 of which must contain a Settlement
-  \item 1 × Center (VI--VII) Map tile, which must contain the Grail field
+  \item 4 × Starting (I) Map Tile
+  \item 6 × Near (IV--V) Map Tile, 4 of which must contain an Obelisk
+  \item 8 × Far (II--III) Map Tile, 4 of which must contain a Settlement
+  \item 1 × Center (VI--VII) Map Tile, which must contain the Grail Field
 \end{itemize}
 
 \textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.
+To win the scenario, a Hero must obtain the Grail token and bring it to their Faction Town.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If the Grail is not obtained at least once by the end of the \nth{13} round, the game ends, and all players lose the scenario.
+If the Grail is not obtained at least once by the end of the \nth{13} Round, the game ends, and all players lose the scenario.
 
-If the Grail token has been obtained, the players gain additional time (until the end of the \nth{16} round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.
+If the Grail token has been obtained, the players gain additional time (until the end of the \nth{16} Round) to bring the Grail to their Faction's Town. Otherwise, all players lose the scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -85,36 +85,36 @@ During this scenario:
     \begin{enumerate}
       \item \textbf{[1st Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_negative}.
       \item \textbf{[2nd Obelisk]} Increase your \svg{gold}, \svg{building_materials}, or \svg{valuables} income by 1 step.
-      \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this field. If you already have a Secondary Hero, gain 3 \svg{gold} instead. Then, choose one enemy player to discard 2 random cards from their hand.
+      \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have a Secondary Hero, gain 3 \svg{gold} instead. Then, choose one enemy player to discard 2 random cards from their hand.
       \item \textbf{[4th Obelisk]} Remove up to 4 cards from your hand, except Statistic cards; then, search each corresponding deck for a card of your choice and put it in your hand.
     \end{enumerate}
-    \item \textbf{[Sacrifice]} Remove a * faction Unit card from your Unit deck in exchange for:
+    \item \textbf{[Sacrifice]} Remove a * Faction Unit card from your Unit deck in exchange for:
     \begin{enumerate}
       \item *\svgunit{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (4)} the Minor Artifact deck.
       \item *\svgunit{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (3)} the Major Artifact deck.
       \item *\svgunit{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit card was on the Pack side, \textbf{Search (2)} the \svgunit{azure} Unit deck; you may Recruit one of these Units for half the cost (rounded down).
     \end{enumerate}
   \end{enumerate}
-  \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
-  \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of ``\textcolor{cobalt}{Grail Knight}.'' Place a blue faction cube on their Hero portrait to mark this effect. A \textcolor{cobalt}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
-  \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of faction cubes on the sacrificed Unit card and on the Obelisk field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 faction cubes on the Unit card and 2 faction cubes on the Obelisk field.
-  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.
-  \item If a Unit recruited at an Obelisk is defeated, Remove it.
+  \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
+  \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of ``\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction cube on their Hero portrait to mark this effect. A \textcolor{cobalt}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
+  \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of Faction cubes on the sacrificed Unit card and on the Obelisk Field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction cubes on the Unit card and 2 Faction cubes on the Obelisk Field.
+  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.
+  \item If a Unit Recruited at an Obelisk is defeated, remove it.
   \item A player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
   \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral \svgunit{azure} Units.
   \item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.
-  \item Players can use their Deck of Might \& Magic when paying gold to defend their faction Town.
-  \item Ignore Combat encounters on the field with the Grail.
-  \item Players may not Visit the field with the Grail token unless they have already Visited at least two Obelisks or the Grail token has been taken by any Hero at least once.
-  \item To obtain the Grail token, a player’s Hero must spend 2 MPs on the field with the Grail.
-  \item If a player does not possess the title of ``\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a faction Unit card from their Unit deck immediately after obtaining the Grail token. This effect can only occur once per player.
+  \item Players can use their Deck of Might \& Magic when paying gold to defend their Faction Town.
+  \item Ignore Combat encounters on the Field with the Grail.
+  \item Players may not Visit the Field with the Grail token unless they have already Visited at least two Obelisks or the Grail token has been taken by any Hero at least once.
+  \item To obtain the Grail token, a player’s Hero must spend 2 MPs on the Field with the Grail.
+  \item If a player does not possess the title of ``\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit card from their Unit deck immediately after obtaining the Grail token. This effect can only occur once per player.
   \item If another Hero defeats the Hero with the Grail token, they also take the Grail token.
   \item If a Hero with the Grail token Surrenders, the Grail token is placed on the hex where the Hero Surrendered.
-  \item If a Neutral army defeats the Hero with the Grail token, the Grail token is placed on the field where the Hero was defeated.
-  \item If a Hero with the Grail token casts Town Portal or uses the Inferno faction Castle Gate building, the Grail token is placed on the hex where the spell was cast or the building used.
-  \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage-red} from your units and assign it to enemy units.''
-  \item A Hero with the Grail token who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.
-  \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat round, if the Hero is a \textcolor{cobalt}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your units.''
+  \item If a Neutral army defeats the Hero with the Grail token, the Grail token is placed on the Field where the Hero was defeated.
+  \item If a Hero with the Grail token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail token is placed on the hex where the Spell was cast or the building used.
+  \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage-red} from your Units and assign it to enemy Units.''
+  \item A Hero with the Grail token who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction cube on the Grail token to mark this effect.
+  \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat Round, if the Hero is a \textcolor{cobalt}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your Units.''
 \end{itemize}
 
 \vspace*{\fill}
