--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -12,7 +12,7 @@
   And above all, beware: it seems that a creature identified as a dragon lurks on this island!}
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario is played over 8 rounds.
+This scenario is played over 8 Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
@@ -24,31 +24,31 @@ This scenario is played over 8 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} units of your choice
-  \item A Few \svgunit{bronze} units of your choice
+  \item A Pack of \svgunit{bronze} Units of your choice
+  \item A Few \svgunit{bronze} Units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
-\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.
+\textbf{Map Tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.
 
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):
+Take the following Map Tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):
 
-$\boldsymbol{P}$ \textbf{× Starting (I) Map tile}
+$\boldsymbol{P}$ \textbf{× Starting (I) Map Tile}
 \begin{itemize}
-  \item Starting Tiles of your chosen factions.
+  \item Starting Tiles of your chosen Factions.
   \item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)
 \end{itemize}
 
-$\boldsymbol{4 P}$ \textbf{× Far (II--III) Map tile}
+$\boldsymbol{4 P}$ \textbf{× Far (II--III) Map Tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)
+Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
@@ -58,21 +58,21 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 
 \textbf{\nth{5} Round:}
 \begin{itemize}
-  \item Gain again the result of one field with a Black Cube.
+  \item Gain again the result of one Field with a Black Cube.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
     \item You can't build a \svgunit{golden} Dwelling.
-    \item You can give Units to another player, even outside your turn, if one of your Heroes is:
+    \item You can give Units to another player, even outside your Turn, if one of your Heroes is:
     \begin{itemize}
-        \item On the same Map tile as another player's Hero.
+        \item On the same Map Tile as another player's Hero.
         \item In another player's Town.
         \item Next to another player's Hero.
     \end{itemize}
-    \item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.
+    \item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your Faction's Unit pool (even if another player has one or more of your Units). This includes Units you've previously given to another player.
     \item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.
-    \item For the last Mine/Settlement battle, add a \svgunit{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!
+    \item For the last Mine/Settlement battle, add a \svgunit{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!
     \item The first time you reach level IV, gain your second specialty.
     \item When you reach level IV, move your token on the level tracker to level III.
     \item Additionally, no player can:
