--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -19,10 +19,10 @@ You can estimate your \textbf{minimal} play time using the following formula:
 Where:
 \begin{itemize}
   \item[$\textbf{P}$] -- number of players
-  \item[$\textbf{R}$] -- number of rounds
+  \item[$\textbf{R}$] -- number of Rounds
 \end{itemize}
 
-For example, if you're playing a 3-player scenario consisting of 12 rounds, you can easily calculate that $3 \times 12 \times 5 = 180$.
+For example, if you're playing a 3-player scenario consisting of 12 Rounds, you can easily calculate that $3 \times 12 \times 5 = 180$.
 Your expected minimal play time would be around 3 hours.
 
 To calculate the \textbf{upper bound} of your play time (more realistic if there are inexperienced players), simply double the result.
@@ -30,18 +30,18 @@ In this case, that would be 6 hours.
 
 \subsection*{Magic Arrows}
 
-Except for the Magic Arrow, each spell appears exactly twice in the spell deck.
-After players prepare their starting M\&M decks, it is recommended to remove Magic Arrows from the spell deck until no more than two remain.
+Except for the Magic Arrow, each Spell appears exactly twice in the Spell deck.
+After players prepare their starting M\&M decks, it is recommended to remove Magic Arrows from the Spell deck until no more than two remain.
 
 \subsection*{Trading Post}
 
-Although rules as written state that you can remove only one card from your hand while visiting a Trading Post, it is recommended to allow removing as many as you like.
+Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.
 
 \includegraphics[width=\linewidth]{\art/rogue.jpg}
 
 \subsection*{Combat with Neutral Units}
 
-During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle board, the player positioning the Neutral Units must do the same.
+During Combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.
 
 Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.
 The exception to this rule is when there are three Neutral \svg{unit_ground} or \svg{unit_flying} Units to position, as all of them must go to the front line.
@@ -86,7 +86,7 @@ See examples that follow.
   \begin{minipage}[t]{0.44\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\examples/battle_ranged_bad.png}
-    \caption[ranged protected]{\textit{The Boars must occupy one of the green fields.}}
+    \caption[ranged protected]{\textit{The Boars must occupy one of the green Fields.}}
   \end{minipage}
   \hfill
   \mbox{}
@@ -96,13 +96,13 @@ See examples that follow.
 
 \subsection*{General Recommendations}
 
-The following are not custom rules but rather recommendations to help you get the most out of your game:
+The following are not custom rules, but rather recommendations to help you get the most out of your game:
 
 \begin{itemize}
-  \item When deciding which building to construct in your town, especially in the early game, it is \textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other faction-specific buildings.
+  \item When deciding which building to construct in your Town, especially in the early game, it is \textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other Faction-specific buildings.
   \item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your deck.
-    This includes any cards that allow you to draw cards or retrieve cards from your discard pile.
-  \item Try to avoid using your Main Hero's movement points for actions that your Secondary Hero can handle, such as flipping the Map tiles, visiting Water Wheels, and so on.
+    This includes any cards that allow you to draw cards or retrieve cards from your Discard Pile.
+  \item Try to avoid using your Main Hero's Movement Points for Actions that your Secondary Hero can handle, such as flipping the Map Tiles, Visiting Water Wheels, and so on.
 \end{itemize}
 
 \begin{center}
