Capitalized 'scenario' to be consistent with the rewritten rulebook

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -18,7 +18,7 @@ Prepare for battle!}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario plays out over 14 Rounds.
+This Scenario plays out over 14 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
@@ -75,7 +75,7 @@ cards are not played again immediately, but instead are played as soon as the ne
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map Tiles and set them up as shown in the scenario map layout:
+Take the following Map Tiles and set them up as shown in the Scenario map layout:
 
 \textbf{3 × Starting (I) Map Tile}
 \begin{itemize}
@@ -164,14 +164,14 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
   \item The Final Charging Army will attack this Round. We must hold Kleesive at all costs!
 \end{itemize}
 
-\textbf{When you complete the scenario:}
+\textbf{When you complete the Scenario:}
 \begin{itemize}
   \item Read: ``Congratulations! You have defended Kleesive and are victorious!''
 \end{itemize}
 
-\subsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
-During this ``Inferno'' Campaign scenario, the following rules apply:
+During this ``Inferno'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.
