--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -16,7 +16,7 @@ The Kreegans are fierce warriors; they will relish the slaughter.}
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over 13 Rounds.
+This Scenario plays out over 13 Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
@@ -63,7 +63,7 @@ This scenario plays out over 13 Rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map Tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
 \textbf{2 × Starting (I) Map Tile}
 \begin{itemize}
@@ -138,15 +138,15 @@ You fail to defeat the Enemy Hero and the Gold Dragon Armies by the end of the R
   \item At the end of the Round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!
 \end{itemize}
 
-\textbf{When you complete the scenario:}
+\textbf{When you complete the Scenario:}
 \begin{itemize}
   \item Read: ``Congratulations! You have completed your quest to kill the fearsome beast, and can claim victory!''
 \end{itemize}
 
 
-\subsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
-During this ``Inferno'' Campaign scenario, the following rules apply:
+During this ``Inferno'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
     \item Your Hero does not gain Experience past Level 5.
