--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -12,11 +12,11 @@ She knows we are close to Steadwick.
 We must occupy Steadwick before she arrives.
 Once we own Erathia's capitol, not even Catherine Ironfist will wrench it from our hands.}
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario plays out over 16 Rounds.
+This Scenario plays out over 16 Rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
 \textbf{Faction:} Inferno
 
@@ -68,7 +68,7 @@ This scenario plays out over 16 Rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map Tiles and set them up as shown in the scenario map layout:
+Take the following Map Tiles and set them up as shown in the Scenario map layout:
 
 \textbf{2 × Starting (I) Map Tile}
 \begin{itemize}
@@ -184,19 +184,19 @@ You run out of time -- you have time till the end of the Round 16.
     You have failed us... miserably.''
 \end{itemize}
 
-\textbf{When you complete the scenario:}
+\textbf{When you complete the Scenario:}
 \begin{itemize}
   \item Read: ``Congratulations! You captured Steadwick and are victorious!''
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional rules}}
 
-During this ``Inferno'' Campaign scenario, the following rules apply:
+During this ``Inferno'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
     \item The General Kendal Hero does not move and only waits in their Town. They start with Walls, a Gate,
       and an Arrow Tower on their side of the Combat Board.
-    \item The difficulty Level of every Combat encounter on the map increases by one till the end of the scenario
+    \item The difficulty Level of every Combat encounter on the map increases by one till the end of the Scenario
       (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).
     \item The Enemy Charging Heroes have only 2 Movement Points, instead of 3. They ignore everything else
       (including Mines and Settlements if possible) and go straight for the player's Faction Town (on Map Tile S6).
