--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -10,7 +10,7 @@
 \textit{A lady clad in dark robes visits you in your dreams, offering you a golden chalice filled with blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This scenario is played over 13 Rounds.
+This Scenario is played over 13 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 4
@@ -32,9 +32,9 @@ This scenario is played over 13 Rounds.
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map Tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{For a 2-player scenario:}
+\textbf{For a 2-player Scenario:}
 \begin{itemize}
   \item 2 × Starting (I) Map Tile
   \item 4 × Near (IV--V) Map Tile, all of which must contain an Obelisk
@@ -42,7 +42,7 @@ Take the following Map Tiles and arrange them as shown in the scenario map layou
   \item 1 × Center (VI--VII) Map Tile, which must contain the Grail Field
 \end{itemize}
 
-\textbf{For a 4-player scenario:}
+\textbf{For a 4-player Scenario:}
 \begin{itemize}
   \item 4 × Starting (I) Map Tile
   \item 6 × Near (IV--V) Map Tile, 4 of which must contain an Obelisk
@@ -53,12 +53,12 @@ Take the following Map Tiles and arrange them as shown in the scenario map layou
 \textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-To win the scenario, a Hero must obtain the Grail token and bring it to their Faction Town.
+To win the Scenario, a Hero must obtain the Grail token and bring it to their Faction Town.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If the Grail is not obtained at least once by the end of the \nth{13} Round, the game ends, and all players lose the scenario.
+If the Grail is not obtained at least once by the end of the \nth{13} Round, the game ends, and all players lose the Scenario.
 
-If the Grail token has been obtained, the players gain additional time (until the end of the \nth{16} Round) to bring the Grail to their Faction's Town. Otherwise, all players lose the scenario.
+If the Grail token has been obtained, the players gain additional time (until the end of the \nth{16} Round) to bring the Grail to their Faction's Town. Otherwise, all players lose the Scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -70,13 +70,13 @@ If the Grail token has been obtained, the players gain additional time (until th
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
-Before this scenario:
+Before this Scenario:
 
 \begin{itemize}
   \item Split the Artifact deck by rarity into 3 separate decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far tiles, Minor or Major Artifacts on Near tiles, and Major or Relic Artifacts on Center tiles.
 \end{itemize}
 
-During this scenario:
+During this Scenario:
 
 \begin{itemize}
   \item When a player Visits an Obelisk, they \textit{must} resolve one of the following effects:
