--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -15,7 +15,7 @@ Will you dismiss the curse as a mere distraction, or can the dragon be tamed to 
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario is played over a maximum of 11 Rounds.
+This Scenario is played over a maximum of 11 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
@@ -37,7 +37,7 @@ This scenario is played over a maximum of 11 Rounds.
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map Tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 \begin{itemize}
   \item 2 × Starting (I) Map Tile
   \item 2 × Far (II-III) Map Tile
@@ -65,7 +65,7 @@ However, if the random Town is first captured in the \nth{10} Round, the game pr
 
 \begin{multicols}{2}
 \subsection*{\MakeUppercase{Additional Rules}}
-During this scenario:
+During this Scenario:
 \begin{itemize}
   \item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \svg{building_materials}
   \item The random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
