--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -12,7 +12,7 @@
 }
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This scenario is played over 14 Rounds.
+This Scenario is played over 14 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 3
@@ -35,11 +35,11 @@ This scenario is played over 14 Rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the scenario map layout.
+Take the following Map Tiles and arrange them as shown in the Scenario map layout.
 
 \columnbreak
 
-\textbf{For a 2-player scenario:}
+\textbf{For a 2-player Scenario:}
 \begin{itemize}
   \item 2 × Starting (I) Map Tile
   \item 2 × Far (II--III) Map Tile
@@ -47,7 +47,7 @@ Take the following Map Tiles and arrange them as shown in the scenario map layou
   \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the tile
 \end{itemize}
 
-\textbf{For a 3-player scenario:}
+\textbf{For a 3-player Scenario:}
 \begin{itemize}
   \item 3 × Starting (I) Map Tile
   \item 3 × Far (II--III) Map Tile
@@ -59,7 +59,7 @@ Take the following Map Tiles and arrange them as shown in the scenario map layou
 Slay the Dragon Boss with your Main Hero.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If the Dragon Boss still lives at the end of the \nth{14} Round, all players lose the scenario.
+If the Dragon Boss still lives at the end of the \nth{14} Round, all players lose the Scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -70,14 +70,14 @@ If the Dragon Boss still lives at the end of the \nth{14} Round, all players los
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
-Before the start of this scenario:
+Before the start of this Scenario:
 
 \begin{itemize}
   \item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
     You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} -- Azure, \textit{Defense} -- Crystal, \textit{Knowledge} -- Rust, \textit{Power} -- Faerie.
 \end{itemize}
 
-During this scenario:
+During this Scenario:
 
 \begin{itemize}
   \item Only a Main Hero can kill the Dragon.
