--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -12,9 +12,9 @@
   And above all, beware: it seems that a creature identified as a dragon lurks on this island!}
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario is played over 8 Rounds.
+This Scenario is played over 8 Rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
 \textbf{Player Count:} 1 -- 4
 
@@ -36,7 +36,7 @@ This scenario is played over 8 Rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):
+Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
 $\boldsymbol{P}$ \textbf{× Starting (I) Map Tile}
 \begin{itemize}
