--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -14,7 +14,7 @@
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario is played over 12 Rounds.
+This Scenario is played over 12 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
@@ -38,7 +38,7 @@ This scenario is played over 12 Rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
 \textbf{2 × Starting (I) Map Tile}
 \begin{itemize}
