--- a/main_en.tex
+++ b/main_en.tex
@@ -19,7 +19,7 @@
 
 \newcommand{\intro}{
   This is a community-driven project, which has a \href{\repourl}{GitHub repository}.
-  Everyone is welcome to contribute scenarios, make changes, and fix errors.
+  Everyone is welcome to contribute Scenarios, make changes, and fix errors.
 }
 \newcommand{\pageshorthand}{p.}
 
