--- a/metadata.tex
+++ b/metadata.tex
@@ -196,7 +196,7 @@
 }
 %End of create section heading.
 
-% Add title page for scenario type
+% Add title page for Scenario type
 \newcommand{\addscenariogroup}[2]{
   \thispagestyle{empty}
   \cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{}#1}
@@ -246,10 +246,10 @@
 
 % Four mandatory params
 % - [optional] set to "subsection" or any other Level if you want to have this as a subsection in TOC
-% - lines of campaign name (1-2 according to the name length)
-% - campaign name
-% - scenario name
-% - icon
+% - Lines of Campaign Name (1-2 according to the name length)
+% - Campaign Name
+% - Scenario Name
+% - Icon
 %
 % TODO: possibly replace the whole \addsection with this
 \newcommand{\addscenariosection}[5][section]{
