--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -9,7 +9,7 @@
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over ... Rounds.
+This Scenario plays out over ... Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
@@ -52,7 +52,7 @@ This scenario plays out over ... Rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map Tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
 \textbf{X × Starting (I) Map Tile}
 \begin{itemize}
@@ -105,7 +105,7 @@ Take the following Map Tiles and arrange them as shown in the scenario map layou
 
 \subsection*{\MakeUppercase{Additional rules}}
 
-During this ``... Faction ...'' Campaign scenario, the following rules apply:
+During this ``... Faction ...'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item ...
@@ -115,7 +115,7 @@ During this ``... Faction ...'' Campaign scenario, the following rules apply:
 
 \newpage
 
-% NOTE: The last page of scenario preparation should use
+% NOTE: The last page of Scenario preparation should use
 % multicols instead of multicols* to create space for map.
 % \begin{multicols}{2}
 % ... your content that overflows to the second page ...
