--- a/templates/default.tex
+++ b/templates/default.tex
@@ -11,7 +11,7 @@
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario is played over ... Rounds.
+This Scenario is played over ... Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
@@ -41,7 +41,7 @@ This scenario is played over ... Rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
   \textbf{X × Starting (I) Map Tile}
 \begin{itemize}
