--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -15,7 +15,7 @@
 }
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario is played over 16 Rounds (15 on Impossible difficulty).
+This Scenario is played over 16 Rounds (15 on Impossible difficulty).
 
 \subsection*{\MakeUppercase{Player Setup}}
 
@@ -39,7 +39,7 @@ This scenario is played over 16 Rounds (15 on Impossible difficulty).
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):
+Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
 $\boldsymbol{P}$ \textbf{× Starting (I) Map Tile}
 \begin{itemize}
@@ -89,7 +89,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
   \item You can use your build token to give your resources to another player.
   \item Two players can use their build Tokens to exchange Artifacts and/or Spells.
   \item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.
-  \item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of the Titans' Stronghold is sometimes split in two because certain scenarios are otherwise impossible to implement with the cards from certain expansions).
+  \item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the cards from certain expansions).
   \item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold deck instead of from the Neutral Unit card decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit decks instead of the Titans' Stronghold deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold deck. If there are not enough Unit cards in this deck, draw as many Unit cards as are available and place them on the Combat Board.
   \item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat Round, just like Combat against non-Azure tier Units.
   \item Additionally, no player can:
