--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -22,7 +22,7 @@ Where:
   \item[$\textbf{R}$] -- number of Rounds
 \end{itemize}
 
-For example, if you're playing a 3-player scenario consisting of 12 Rounds, you can easily calculate that $3 \times 12 \times 5 = 180$.
+For example, if you're playing a 3-player Scenario consisting of 12 Rounds, you can easily calculate that $3 \times 12 \times 5 = 180$.
 Your expected minimal play time would be around 3 hours.
 
 To calculate the \textbf{upper bound} of your play time (more realistic if there are inexperienced players), simply double the result.
@@ -41,7 +41,7 @@ Although rules as written state that you can remove only one card from your hand
 
 \subsection*{Combat with Neutral Units}
 
-During Combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.
+During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.
 
 Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.
 The exception to this rule is when there are three Neutral \svg{unit_ground} or \svg{unit_flying} Units to position, as all of them must go to the front line.
