Fixed uppercase titles (just in case, or if the layout changes in the future)

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -73,7 +73,7 @@ and remains in effect on the Unit. If ``Shield of the Damned'' is drawn, it take
 any Charging Army Unit takes attack or retaliation damage. If the AI Skill card advises ``do it again'', the Artifact
 cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and set them up as shown in the Scenario map layout:
 
@@ -96,7 +96,7 @@ Take the following Map Tiles and set them up as shown in the Scenario map layout
   \item 1 × Inferno (N12)
 \end{itemize}
 
-\subsection*{\MakeUppercase{Heroes placement}}
+\subsection*{\MakeUppercase{Heroes Placement}}
 
 The Enemy Charging Rampart Hero \#1 starts on the center Field of the S4 Starting Map Tile.
 
