--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -14,11 +14,11 @@ Before we conquer this region and redirect our forces to Steadwick, we must anni
 Our Kreegan allies from Eeofol have requested the honor of this mission.
 The Kreegans are fierce warriors; they will relish the slaughter.}
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
 This Scenario plays out over 13 Rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
 \textbf{Faction:} Inferno
 
@@ -61,7 +61,7 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Ivor's Skill:} Archery Ability card (it always resolves its Basic effect)
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
@@ -87,7 +87,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 1 × Dragon Utopia Center Map Tile (C1)
 \end{itemize}
 
-\subsection*{\MakeUppercase{Heroes placement}}
+\subsection*{\MakeUppercase{Heroes Placement}}
 
 The Enemy Hero is represented by one Rampart Faction Hero model of your choice
 and appears in the center Field of the S4 Starting Map Tile.
