--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -66,7 +66,7 @@ This Scenario plays out over 16 Rounds.
 
 \textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\footnote{All the Charging Heroes' Enemies use the same AI and Spell decks. Reset them after every Combat.}.
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and set them up as shown in the Scenario map layout:
 
@@ -93,7 +93,7 @@ Take the following Map Tiles and set them up as shown in the Scenario map layout
   \item 1 × Necropolis (N4)
 \end{itemize}
 
-\subsection*{\MakeUppercase{Heroes placement}}
+\subsection*{\MakeUppercase{Heroes Placement}}
 
 The Enemy Hero General Kendal is represented by one Castle Faction Hero
 model and appears on the center Field of the S3 Starting Map Tile.
@@ -189,7 +189,7 @@ You run out of time -- you have time till the end of the Round 16.
   \item Read: ``Congratulations! You captured Steadwick and are victorious!''
 \end{itemize}
 
-\subsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
 During this ``Inferno'' Campaign Scenario, the following rules apply:
 
