--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -7,11 +7,11 @@
 
 \textbf{Source:} ...
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
 This Scenario plays out over ... Rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
 \textbf{Faction:} ...
 
@@ -36,7 +36,7 @@ This Scenario plays out over ... Rounds.
     \item ...
 \end{itemize}
 
-\subsection*{\MakeUppercase{AI hero setup}}
+\subsection*{\MakeUppercase{AI Hero Setup}}
 
 \textbf{Faction:} ...
 
@@ -50,7 +50,7 @@ This Scenario plays out over ... Rounds.
 
 \textbf{Special:} ...
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
@@ -63,7 +63,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \textbf{Z × Near (IV--V) Map Tile}
 
-\subsection*{\MakeUppercase{Heroes placement}}
+\subsection*{\MakeUppercase{Heroes Placement}}
 
 ... describe how your and enemy heroes will be placed ...
 
@@ -103,7 +103,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 %   \item Repeat Timed Events of Rounds 7 and 8.
 % \end{itemize}
 
-\subsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
 During this ``... Faction ...'' Campaign Scenario, the following rules apply:
 
@@ -131,7 +131,7 @@ During this ``... Faction ...'' Campaign Scenario, the following rules apply:
 
 \begin{multicols*}{2}
 
-\subsection*{\MakeUppercase{The story}}
+\subsection*{\MakeUppercase{The Story}}
 
 ... put your immersive story here ...
 
